not built yet messaging

--- a/app/views/notes-tool-1-0/assessment-notes.html
+++ b/app/views/notes-tool-1-0/assessment-notes.html
@@ -12,7 +12,7 @@
 			{{data['notes-title'] or "Assessment visit notes"}}
 		</h1>
 		<p class="govuk-!-margin-bottom-9">
-			<a href="#" class="govuk-link--no-visited-state">Rename<span class="govuk-visually-hidden"> these assessment visit notes</span></a>
+			<a href="not-built-yet" class="govuk-link--no-visited-state">Rename<span class="govuk-visually-hidden"> these assessment visit notes</span></a>
 		</p>
 
 		<h2 class="govuk-heading-l">
@@ -54,7 +54,7 @@
 		<p>
 			{{govukButton({
 				text: "Add audio recording",
-				href: "#",
+				href: "not-built-yet",
 				classes: "govuk-button--secondary"
 			})}}
 		</p>
@@ -87,13 +87,13 @@
 			<p>
 				{{govukButton({
 					html: 'Download<span class="govuk-visually-hidden"> assessment notes</span>',
-					href: "confirm-identity",
+					href: "not-built-yet",
 					classes: "govuk-!-margin-bottom-0"
 				})}}
 			</p>
 
 			<p>
-				<a href="#" class="govuk-link--no-visited-state">Preview assessment notes</a>
+				<a href="not-built-yet" class="govuk-link--no-visited-state">Preview assessment notes</a>
 			</p>
 		</div>
 
