--- a/app/views/notes-tool-1-0/new-media-file.html
+++ b/app/views/notes-tool-1-0/new-media-file.html
@@ -37,7 +37,8 @@
 
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
-					text: "Upload"
+					text: "Upload",
+					href: "not-built-yet"
 				})}}
 			</p>
 		</form>
