--- a/app/views/case-note-1-0/cancel-written-note.html
+++ b/app/views/case-note-1-0/cancel-written-note.html
@@ -16,32 +16,14 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
-			{% set notesInputHtml %}
-			{{ govukInput({
-				label:
-				{
-					text: "Enter secure code",
-					isPageHeading: false
-				},
-				classes: "govuk-input--width-20",
-				hint:
-				{
-					text: ""
-				},
-				id: "notes-id",
-				name: "notes-id",
-				spellcheck: false
-			}) }}
-			{% endset %}
-
 			{{ govukRadios({
-				idPrefix: "existing-new",
-				name: "existing-new",
+				idPrefix: "delete-note",
+				name: "delete-note",
 				fieldset: 
 				{
 					legend: 
 					{
-						text: "Are you starting a new assessment visit?",
+						text: "Are you sure you want to delete this written note?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
@@ -57,19 +39,14 @@
 				},
 				{
 					value: "no",
-					text: "No, I need to access existing notes",
-					conditional:
-					{
-						html: notesInputHtml
-					}
+					text: "No"
 				}
 				]
 			}) }}
 
 			<p>
 				{{govukButton({
-					text: "Continue",
-					href: "email-address"
+					text: "Continue"
 				})}}
 			</p>
 		</form>
