--- a/app/views/case-note-1-0/contact-date.html
+++ b/app/views/case-note-1-0/contact-date.html
@@ -16,14 +16,32 @@
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
+			{% set contactDateHtml %}
+			{{ govukInput({
+				label:
+				{
+					text: "Enter a date",
+					isPageHeading: false
+				},
+				classes: "govuk-input--width-20",
+				hint:
+				{
+					text: ""
+				},
+				id: "contact-date-specific",
+				name: "contact-date-specific",
+				spellcheck: false
+			}) }}
+			{% endset %}
+
 			{{ govukRadios({
-				idPrefix: "existing-new",
-				name: "existing-new",
+				idPrefix: "contact-date",
+				name: "contact-date",
 				fieldset: 
 				{
 					legend: 
 					{
-						text: "Search your CMS for a record",
+						text: "When was this contact?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
@@ -35,26 +53,14 @@
 				items: [
 				{
 					value: "a",
-					text: "Child A",
-					hint:
-					{
-						text: "Born 23 January 2010 (x years old)"
-					}
+					text: "Today"
 				},
 				{
 					value: "b",
-					text: "Child B",
-					hint:
+					text: "A different date",
+					conditional: 
 					{
-						text: "Born 1 August 2016 (x years old)"
-					}
-				},
-				{
-					value: "c",
-					text: "Child C",
-					hint:
-					{
-						text: "Born 3 March 2011 (x years old)"
+						html: contactDateHtml
 					}
 				}
 				]
@@ -63,7 +69,7 @@
 			<p>
 				{{govukButton({
 					text: "Save and continue",
-					href: "type-of-contact"
+					href: "contact-time"
 				})}}
 			</p>
 		</form>
