--- a/app/views/case-note-1-0/check-your-answers.html
+++ b/app/views/case-note-1-0/check-your-answers.html
@@ -195,7 +195,8 @@
 
 		<p>
 			{{govukButton({
-				text: "Confirm and send"
+				text: "Confirm and send",
+				href: "confirmation-page"
 			})}}
 		</p>
 	</div>
