--- a/app/views/case-note-1-0/start.html
+++ b/app/views/case-note-1-0/start.html
@@ -14,7 +14,11 @@
 		</h1>
 
 		<p class="govuk-body-l">
-			Social workers can use this service to record notes, images and audio from a social work assessment visit.
+			Social workers can use this service to record a case note and send it to their Local authority system.
+		</p>
+
+		<p>
+			You will only be able to use this service if your Local authority is part of this Alpha.
 		</p>
 
 		<p>
@@ -22,21 +26,14 @@
 		</p>
 
 		<ul class="govuk-list govuk-list--bullet">
-			<li>record written notes</li>
-			<li>add photos and videos</li>
-			<li>add audio recordings</li>
-			<li>convert audio recordings to text</li>
-			<li>export assessment notes</li>
+			<li>thing 1</li>
+			<li>thing 2</li>
+			<li>thing 3</li>
 		</ul>
 
 		<p>
 			You must use your local authority email address to access this service.
-		</p>
-
-
-		<p>
-			You will only be able to use this service if your Local authority is part of this Alpha.
-		</p>
+		</p>		
 
 		<p>
 			{{govukButton({
