--- a/app/views/case-note-1-0/contact-date.html
+++ b/app/views/case-note-1-0/contact-date.html
@@ -2,77 +2,80 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-{% include './includes/phase-banner--alpha.html' %}
+	{% include './includes/phase-banner--alpha.html' %}
 
-{{ govukBackLink({
-	"text": "Back",
-	"href": "javascript: window.history.go(-1)"
-}) 
+	{{ govukBackLink({
+		"text": "Back",
+		"href": "javascript: window.history.go(-1)"
+	}) 
 }}
 {% endblock %}
 
 {% block content %}
 
-<div class="govuk-grid-row">
+	<div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
-		<form method="post">
-			{% set contactDateHtml %}
-			{{ govukInput({
-				label:
-				{
-					text: "Enter a date",
-					isPageHeading: false
-				},
-				classes: "govuk-input--width-20",
-				hint:
-				{
-					text: ""
-				},
-				id: "contact-date-specific",
-				name: "contact-date-specific",
-				spellcheck: false
-			}) }}
-			{% endset %}
+	<form method="post">
+	{% set contactDateHtml %}
 
-			{{ govukRadios({
-				idPrefix: "contact-date",
-				name: "contact-date",
-				fieldset: 
-				{
-					legend: 
-					{
-						text: "When was this contact?",
-						isPageHeading: true,
-						classes: "govuk-fieldset__legend--xl"
-					}
-				},
-				hint: 
-				{
-					text: ""
-				},
-				items: [
-				{
-					value: "a",
-					text: "Today"
-				},
-				{
-					value: "b",
-					text: "A different date",
-					conditional: 
-					{
-						html: contactDateHtml
-					}
-				}
-				]
-			}) }}
+	{{ govukDateInput({
+		id: "contact-date",
+		namePrefix: "contact-date",
+		fieldset:
+		{
+			legend:
+			{
+				text: "Enter a date",
+				isPageHeading: true,
+				classes: "govuk-fieldset__legend--s"
+			}
+		},
+		hint:
+		{
+			text: "For example, 12 11 2007"
+		}
+	}) }}
+	{% endset %}
 
-			<p>
-				{{govukButton({
-					text: "Save and continue",
-					href: "contact-time"
-				})}}
-			</p>
-		</form>
+	{{ govukRadios({
+		idPrefix: "contact-date-type",
+		name: "contact-date-type",
+		fieldset: 
+		{
+			legend: 
+			{
+				text: "When was this contact?",
+				isPageHeading: true,
+				classes: "govuk-fieldset__legend--xl"
+			}
+		},
+		hint: 
+		{
+			text: ""
+		},
+		items: [
+		{
+			value: "a",
+			text: "Today"
+		},
+		{
+			value: "b",
+			text: "A different date",
+			conditional: 
+			{
+				html: contactDateHtml
+			}
+		}
+		]
+	}) }}
+
+	<p>
+	{{govukButton({
+		text: "Save and continue",
+		href: "contact-time"
+	})}}
+	</p>
+	</form>
 	</div>
-</div>
+	</div>
 {% endblock %}
