half working daily record

--- a/app/views/case-note-1-0/contact-time.html
+++ b/app/views/case-note-1-0/contact-time.html
@@ -52,8 +52,7 @@
 
 					<p>
 						{{govukButton({
-							text: "Save and continue",
-							href: "contact-method"
+							text: "Save and continue"
 						})}}
 					</p>
 				</form>
