--- a/app/views/case-note-1-0/checks-carried-out.html
+++ b/app/views/case-note-1-0/checks-carried-out.html
@@ -21,21 +21,21 @@
 				id: "note-content",
 				label:
 				{
-					text: "Add details about any incidents",
+					text: "What checks were made during the day?",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
 				rows: "16",
 				hint:
 				{
-					html: "You should include details of specific incidents as well as the reference for any related forms that were generated."
+					html: "<p>Include information about all checks carried out throughout the day for this child or young person.</p><p>For example, general checks such as bedroom or laundry checks, curfew checks or welfare checks."
 				}
 			}) }}
 
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "checks-carried-out"
+					href: "mental-health-concerns"
 				})}}
 			</p>
 		</form>
