--- a/app/views/case-note-1-0/wellbeing.html
+++ b/app/views/case-note-1-0/wellbeing.html
@@ -21,14 +21,18 @@
 				id: "note-content",
 				label:
 				{
-					text: "Add details about any incidents",
+					text: "Add any wellbeing information (optional)",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
 				rows: "16",
 				hint:
 				{
-					html: "You should include details of specific incidents as well as the reference for any related forms that were generated."
+					html: '<p>Include any information about any wellbeing concerns.</p><p>You should also include details of the child or young person’s:</p>
+					<ul class="govuk-list govuk-list--bullet">
+						<li>dietary monitoring requirements</li>
+						<li>sleep pattern monitoring requirements</li>
+					</ul>'
 				}
 			}) }}
 
