--- a/app/views/case-note-1-0/medication.html
+++ b/app/views/case-note-1-0/medication.html
@@ -23,7 +23,7 @@
 				{
 					legend: 
 					{
-						text: "Was the child or young person take or refuse to take any medication?",
+						text: "Did the child or young person take or refuse to take any medication?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
