--- a/app/views/case-summary-tool-1-0/smart-plan.html
+++ b/app/views/case-summary-tool-1-0/smart-plan.html
@@ -21,7 +21,7 @@
 				id: "note-content",
 				label:
 				{
-					text: "What is the SMART plan?",
+					text: "Add details of the SMART plan going forward",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
