--- a/app/views/case-summary-tool-1-0/view-of-current-situation.html
+++ b/app/views/case-summary-tool-1-0/view-of-current-situation.html
@@ -21,14 +21,14 @@
 				id: "note-content",
 				label:
 				{
-					text: "Briefly describe the current situation and support required",
+					text: "What is the child or young person's view of their current situation?",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
 				rows: "16",
 				hint:
 				{
-					text: ""
+					text: "This should only include views regarding the current involvement and support plans."
 				}
 			}) }}
 
