mostly complete journey

--- a/app/views/case-summary-tool-1-0/ethnic-group.html
+++ b/app/views/case-summary-tool-1-0/ethnic-group.html
@@ -23,7 +23,7 @@
 				{
 					legend:
 					{
-						text: "What is the child's or young person's ethnic group?",
+						text: "What is the child or young person's ethnic group?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
