--- a/app/views/case-summary-tool-1-0/other-appearance.html
+++ b/app/views/case-summary-tool-1-0/other-appearance.html
@@ -21,7 +21,7 @@
 				id: "note-content",
 				label:
 				{
-					text: "Add a short description of the child or young person's appearance",
+					text: "Add any other information about the child or young person's appearance (optional)",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
@@ -35,7 +35,7 @@
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "current-situation"
+					href: "view-of-current-situation"
 				})}}
 			</p>
 		</form>
