--- a/app/views/case-summary-tool-1-0/why-involved.html
+++ b/app/views/case-summary-tool-1-0/why-involved.html
@@ -21,7 +21,7 @@
 				id: "note-content",
 				label:
 				{
-					text: "Describe why we're involved and what the issues are",
+					text: "Describe why you're involved and what the issues are",
 					classes: "govuk-label--xl",
 					isPageHeading: true
 				},
