--- a/app/views/case-summary-tool-1-0/smart-plan.html
+++ b/app/views/case-summary-tool-1-0/smart-plan.html
@@ -35,7 +35,7 @@
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "future"
+					href: "email"
 				})}}
 			</p>
 		</form>
