--- a/app/views/case-summary-tool-1-0/view-of-current-situation.html
+++ b/app/views/case-summary-tool-1-0/view-of-current-situation.html
@@ -35,7 +35,7 @@
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "smart-plan"
+					href: "future"
 				})}}
 			</p>
 		</form>
