--- a/app/views/case-note-1-0/detailed-notes.html
+++ b/app/views/case-note-1-0/detailed-notes.html
@@ -28,7 +28,13 @@
 				rows: "16",
 				hint:
 				{
-					text: "A brief description of conversations, including important comments, statements, decision, questions, and answers."
+					html: '<p>A brief description of conversations, including:</p>
+					<ul class="govuk-list govuk-list--bullet">
+						<li>important comments</li>
+							<li>statements</li>
+							<li>decisions</li>
+							<li>questions and answers</li>
+						</ul>'
 				}
 			}) }}
 
