--- a/app/views/case-note-1-0/search-results.html
+++ b/app/views/case-note-1-0/search-results.html
@@ -23,7 +23,7 @@
 				{
 					legend: 
 					{
-						text: "Search your CMS for a record",
+						text: "Select a record",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
