--- a/app/views/case-note-1-0/confirmation-page.html
+++ b/app/views/case-note-1-0/confirmation-page.html
@@ -19,7 +19,7 @@ html: 'This service is being used for research only.'
 <div class="govuk-grid-row">
 	<div class="govuk-grid-column-two-thirds">
 		{{ govukPanel({
-			titleText: "We've sent the case note to your Local authority"
+			titleText: "We've sent this case note to your Local authority"
 		}) }}
 
 		<!-- <p class="govuk-body">We have sent you a confirmation email.</p> -->
