--- a/app/views/s47-outcome-1-0/start.html
+++ b/app/views/s47-outcome-1-0/start.html
@@ -25,6 +25,19 @@
 			You will only be able to use this service if your Local authority is part of this Alpha.
 		</p>
 
+		<ul class="govuk-list govuk-list--bullet">
+			<li>Agency checks</li>
+			<li>Content of contact with the child cross-referenced with any specific forms used</li>
+			<li>Strategy discussion/meeting notes</li>
+			<li>Details of the enquiry</li>
+			<li>Body maps (where applicable)</li>
+			<li>Medical report (where applicable)</li>
+			<li>Assessment including identification of risks and how they may be managed</li>
+			<li>Legal advice (where applicable)</li>
+			<li>Decision-making processes</li>
+			<li>Outcome/further action planned</li>
+		</ul>
+
 		<p>
 			{{govukButton({
 				text: "Start now",
