--- a/app/views/case-note-2-0/search-for-record.html
+++ b/app/views/case-note-2-0/search-for-record.html
@@ -20,7 +20,7 @@
 				Search for a record
 			</h1>
 			<p>
-				We'll search your CMS for records matching your search term.
+				We'll search your CMS for matching records.
 			</p>
 			{{ govukInput({
 				label:
