--- a/app/views/case-note-2-0/search-results.html
+++ b/app/views/case-note-2-0/search-results.html
@@ -30,7 +30,7 @@
 				},
 				hint: 
 				{
-					text: "We'll create a case note for this record."
+					text: "We'll create a case note for the record you select."
 				},
 				items: [
 				{
