--- a/app/views/case-note-2-0/alone.html
+++ b/app/views/case-note-2-0/alone.html
@@ -47,7 +47,7 @@
 			<p>
 				{{govukButton({
 					text: "Save and continue",
-					href: "contact-reason"
+					href: "detailed-notes"
 				})}}
 			</p>
 		</form>
