--- a/app/views/case-note-2-0/contact-reason.html
+++ b/app/views/case-note-2-0/contact-reason.html
@@ -36,7 +36,7 @@ to discuss a joint visit" or "letter from Doctor Smith with psychiatric report r
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "detailed-notes"
+					href: "other-family-present"
 				})}}
 			</p>
 		</form>
