--- a/app/views/case-note-2-0/contact-time.html
+++ b/app/views/case-note-2-0/contact-time.html
@@ -53,7 +53,7 @@
 					<p>
 						{{govukButton({
 							text: "Save and continue",
-							href: "other-family-present"
+							href: "contact-reason"
 						})}}
 					</p>
 				</form>
