--- a/app/views/case-note-2-0/contact-date.html
+++ b/app/views/case-note-2-0/contact-date.html
@@ -56,7 +56,7 @@
 		items: [
 		{
 			value: "a",
-			text: "Today"
+			text: "Today (" + now|formatDate('D MMMM YYYY') + ")"
 		},
 		{
 			value: "b",
