--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,18 +17,23 @@
 		<h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
 			{{serviceName}}
 		</h1>
-
 		<p class="govuk-body-l govuk-!-margin-bottom-8">
 			Ideas for how we might help social workers spend more time doing high value tasks.
 		</p>
 
-		<h2 class="govuk-heading-l govuk-!-margin-top-8 govuk-!-margin-bottom-3">
+
+		<h2 class="govuk-heading-l">
 			Sketches and ideas
 		</h2>
+
+
 		<h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-			<a href="notes-tool-1-0">Notes tool version 1-0</a>
-			<span class="govuk-caption-m">20 January 2021</span>
+			Notes tool
 		</h3>
+		<h4 class="govuk-heading-s">
+			<a href="notes-tool-1-0">Version 1-0</a>
+			<span class="govuk-caption-m">20 January 2021</span>
+		</h4>
 		<p>
 			First sketches.
 		</p>
@@ -44,11 +49,15 @@
 			</li>
 		</ul>
 
+		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 		<h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-			<a href="case-summary-tool-1-0">Case summary tool 1-0</a>
-			<span class="govuk-caption-m">2 February 2021</span>
+			Case summary tool
 		</h3>
+		<h4 class="govuk-heading-s">
+			<a href="case-summary-tool-1-0">Version 1-0</a>
+			<span class="govuk-caption-m">2 February 2021</span>
+		</h4>
 		<p>
 			First sketches.
 		</p>
@@ -58,11 +67,34 @@
 			</li>
 		</ul>
 
+		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 		<h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-			<a href="case-note-1-0">Record a case note 1-0</a>
-			<span class="govuk-caption-m">2 February 2021</span>
+			Record a case note
 		</h3>
+		<h4 class="govuk-heading-s">
+			<a href="case-note-2-0">Version 2-0</a>
+			<span class="govuk-caption-m">5 February 2021</span>
+		</h4>
+		<p>
+			Journey refinements based on Liquid Logic screenshots.
+		</p>
+		<ul class="govuk-list govuk-list--bullet">
+			<li>
+				Limited to adding Case note only
+			</li>
+			<li>
+				Additional questions (from Liquid Logic process)
+			</li>
+			<li>
+				Content improvements
+			</li>
+		</ul>
+
+		<h4 class="govuk-heading-s">
+			<a href="case-note-1-0">Version 1-0</a>
+			<span class="govuk-caption-m">2 February 2021</span>
+		</h4>
 		<p>
 			First sketches.
 		</p>
@@ -75,21 +107,22 @@
 			</li>
 		</ul>
 
+		<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 		<h3 class="govuk-heading-m govuk-!-margin-bottom-2">
-			<a href="s47-outcome-1-0">Section 47 tool 1-0</a>
-			<span class="govuk-caption-m">3 February 2021</span>
+			Section 47 tool
 		</h3>
+		<h4 class="govuk-heading-s">
+			<a href="s47-outcome-1-0">Version 1-0</a>
+			<span class="govuk-caption-m">3 February 2021</span>
+		</h4>
 		<p>
 			First sketches.
 		</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li>
+			<!-- <li>
 				
-			</li>
-			<li>
-				
-			</li>
+			</li> -->
 		</ul>
 	</div>
 
