--- a/app/views/case-note-2-0/significant-event.html
+++ b/app/views/case-note-2-0/significant-event.html
@@ -47,7 +47,7 @@
 			<p class="govuk-!-margin-bottom-0">
 				{{govukButton({
 					text: "Save and continue",
-					href: "check-your-answers"
+					href: "attachments"
 				})}}
 			</p>
 		</form>
