--- a/app/views/notes-tool-3-0/confirm-identity.html
+++ b/app/views/notes-tool-3-0/confirm-identity.html
@@ -38,7 +38,7 @@
 			<p>
 				{{govukButton({
 					text: "Continue",
-					href: "search-for-record"
+					href: "select-case"
 				})}}
 			</p>
 
