--- a/app/views/notes-tool-3-0/event-type.html
+++ b/app/views/notes-tool-3-0/event-type.html
@@ -17,45 +17,45 @@
 	<div class="govuk-grid-column-two-thirds">
 		<form method="post">
 			{{ govukRadios({
-				idPrefix: "existing-new",
-				name: "existing-new",
+				idPrefix: "type-of-contact",
+				name: "type-of-contact",
 				fieldset: 
 				{
 					legend: 
 					{
-						text: "Select a record",
+						text: "What was the event?",
 						isPageHeading: true,
 						classes: "govuk-fieldset__legend--xl"
 					}
 				},
 				hint: 
 				{
-					text: "We'll create a case note for the record you select."
+					text: ""
 				},
 				items: [
 				{
-					value: "a",
-					text: "Child A",
-					hint:
-					{
-						text: "Born 23 January 2010 (x years old)"
-					}
+					value: "home-visit",
+					text: "Home visit"
 				},
 				{
-					value: "b",
-					text: "Child B",
-					hint:
-					{
-						text: "Born 1 August 2016 (x years old)"
-					}
+					value: "meeting",
+					text: "Meeting"
 				},
 				{
-					value: "c",
-					text: "Child C",
-					hint:
-					{
-						text: "Born 3 March 2011 (x years old)"
-					}
+					value: "telephone-out",
+					text: "Telephone call (out)"
+				},
+				{
+					value: "telephone-in",
+					text: "Telephone call (in)"
+				},
+				{
+					value: "letter-out",
+					text: "Letter (out)"
+				},
+				{
+					value: "letter-in",
+					text: "Letter (in)"
 				}
 				]
 			}) }}
@@ -63,7 +63,7 @@
 			<p>
 				{{govukButton({
 					text: "Save and continue",
-					href: "type-of-contact"
+					href: "contact-date"
 				})}}
 			</p>
 		</form>
